'明天就可以正式开始了'

--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
   </head>
   <body>
     <nav>
-      <a href="#/">项目</a>
-      <a href="#/home1">home1</a>
-      <a href="#/bar/a">bar/a</a>
+      <a href="http://luckyray-fan.github.io/">博客</a>
+      <a href="https://github.com/luckyray-fan/knowledge-point">仓库</a>
     </nav>
     <div id="app"></div>
     <script>
       window.$docsify = {
-        name: '',
-        repo: '',
-        coverpage: true
-      };
-      window.$docsify = {
-        loadSidebar: true
+        name: '知识点',
+        repo: 'https://github.com/luckyray-fan/knowledge-point',
+        coverpage: true,
+        loadSidebar: true,
+        subMaxLevel: 2
       };
     </script>
     <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
