--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       a {
         text-decoration: none;
       }
+      .anchor:hover {
+        text-decoration: none;
+      }
+      h3 {
+        font-size: 1.3rem;
+      }
     </style>
   </head>
   <body>
