--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
     </script>
     <script src="https://cdn.bootcss.com/docsify/4.10.2/docsify.min.js"></script>
     <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/search.min.js"></script>
+    <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/zoom-image.min.js"></script>
   </body>
 </html>
