--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         box-shadow: none !important;
       }
     </style>
+    <link rel="icon" href="./favicons.ico" />
   </head>
   <body>
     <nav>
@@ -37,7 +38,7 @@
         repo: 'https://github.com/luckyray-fan/knowledge-point',
         coverpage: true,
         loadSidebar: true,
-        subMaxLevel: 2,
+        subMaxLevel: 3,
         search: {
           placeholder: '搜索文档',
           noData: '没有找到!'
