--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       .search input:focus {
         box-shadow: none !important;
       }
+      .sidebar ul,
+      .sidebar ul li {
+        font-size: large;
+      }
     </style>
     <link rel="icon" href="./favicons.ico" />
   </head>
