--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       };
     </script>
     <script src="https://cdn.bootcss.com/docsify/4.10.2/docsify.min.js"></script>
+    <script src="https://cdn.bootcss.com/prism/9000.0.1/components/prism-typescript.min.js"></script>
     <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/search.min.js"></script>
     <script src="https://cdn.bootcss.com/docsify/4.10.2/plugins/zoom-image.min.js"></script>
   </body>
